# MetaData

./: .gitignore  CMakeLists.txt  MetaDataPrj.sln  README.md  build.sh
Codes/MetaData/include/: Demo.h  Demo2.h  ExceptionIDMetaData.h  ExceptionMetaData.h  GuidOfMetaData.h  IBlob.h  IClone.h  IContainer.h  IInterface.h  IInterfaceDefaultImp.h  IMetaData.h  IObjectTraits.h  IPropertyNotify.h  IUnkwn.h  InterfacedObject.h  MetaData.h  MetaDataClassType.h  MetaDataCustomType.h  MetaDataCustomTypeMemberVar.h  MetaDataCustomTypeProperty.h  MetaDataFunction.h  MetaDataGlobalSpace.h  MetaDataInnerType.h  MetaDataInterface.h  MetaDataMagicUniverse.h  MetaDataMagicUniversePreimage.h  MetaDataModule.h  MetaDataNameSpace.h  MetaDataObjects.h  MetaDataSupport.h  MetaDataSupport2.h  MetaDataSupportBase.h  MetaDataSupportCustomType.h  MetaDataSupportCustomType2.h  MetaDataSupport_Unkwn.h  MetaDataSupport_Unkwn2.h  MetaDataType.h  MetaDataTypeIDAlloc.h  MetaDataVarBase.h  MetaDataVariable.h  (+6 more)
Codes/MetaData/src/: Demo.cpp  Demo.mdo  Demo.meo  Demo2.cpp  Demo2.meo  ExceptionMetaData.cpp  GuidOfMetaData.cpp  IBlob.cpp  IBlob.mdo  IClone.cpp  IClone.mdo  IClone.meo  IContainer.cpp  IContainer.mdo  IContainer.meo  IInterface.cpp  IInterface.mdo  IInterface.meo  IMetaData.cpp  IMetaData.mdo  IObjectTraits.cpp  IObjectTraits.mdo  IPropertyNotify.cpp  IPropertyNotify.mdo  IUnkwn.cpp  IUnkwn.mdo  InterfacedObject.cpp  InterfacedObject.mdo  InterfacedObject.meo  MetaData.cpp  (+25 more)
Codes/include/: CharArray.h  CommonDefine.h  ExceptionBase.h  ExceptionCommon.h  ExceptionID.h  MDAssert.h  MacroTool.h  MetaDataExtraObjects.meo  TArray.h  Typedef.h
Codes/lib_h/: expat.h
Codes/src/: CharArray.cpp  ExceptionBase.cpp  ExceptionCommon.cpp  ExtraMetaDataObjects.mdo  MetaDataObjects.cpp
MetaData/: MetaData.vcxproj  MetaData.vcxproj.filters  MetaDataMain.cpp  ReadMe.txt  Source.def
MetaDataLib/: MetaDataLib.vcxproj  MetaDataLib.vcxproj.filters  ReadMe.txt  stdafx.cpp
MetaDataPrj/: MetaDataPrj.cpp  MetaDataPrj.vcxproj  MetaDataPrj.vcxproj.filters  ReadMe.txt  stdafx.cpp  test_items.cpp  test_items.h
MetaDataPrj_Linux/: CMakeLists.txt  Main.cpp  stdafx.h  test_items.cpp
MetaDataTestDll/: CdllCls1.cpp  CdllCls1.h  CdllCls2.cpp  CdllCls2.h  MetaDataTestDll.cpp  MetaDataTestDll.vcxproj  MetaDataTestDll.vcxproj.filters  ReadMe.txt  Source.def  stdafx.cpp
MetaDataTool/: ClassMetaDataCreater.cs  DlgClass.Designer.cs  DlgClass.cs  DlgFunc.Designer.cs  DlgFunc.cs  DlgVar.Designer.cs  DlgVar.cs  InfoFunc.cs  InfoType.cs  InfoVar.cs  MetaDataTool.csproj  Program.cs  Utility.cs  frmMDToolMain.Designer.cs  frmMDToolMain.cs
MetaDataTool/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MetaDataView/: Main.cpp  MetaDataView.vcxproj  MetaDataView.vcxproj.filters  stdafx.h
MetaDataView/Codes/: CommonFunction.cpp  CommonFunction.h  Test.cpp  Test.h  Test.meo
MetaData_Linux/: CMakeLists.txt  MetaDataMain.cpp  stdafx.h
lib/Debug/: MetaData.lib  expat_static.lib
(+48 files in other folders)
